# PartyMate

./: .env.example  .gitignore  DEVLOG.md  DEVPLAN.md  README.md  REPORT.md  _apply_rag_edits.py  main.py  partymate.bat  pyproject.toml  start.fixed.bat
docs/interview/: 薛棋-Agent开发实习面试准备手册.md  面试前10分钟速览.md
docs/superpowers/plans/: 2026-06-10-member-material-workbench-v1.md  2026-06-11-member-memory-v1.md  2026-06-11-ocr-review-workflow-v1.md
examples/: sample_check.txt
partymate/: __init__.py  __main__.py  agent.py  chat_memory.py  cli.py  exporters.py  file_manager.py  main.py  mcp_server.py  reminder_engine.py  timeline_engine.py
partymate/db/: models.py  repository.py  setup.py
partymate/knowledge/: chunks_index.json  party_rules.md
partymate/scripts/: daily_brief.py  import_members.py
partymate/services/: __init__.py  agent_trace_service.py  material_check_service.py  material_import_service.py  meeting_workflow_service.py  member_memory_service.py  member_view_service.py  ocr_review_service.py
partymate/tools/: __init__.py  agent_tools.py  content_gen.py  doc_check.py  file_parser.py  meeting_summary.py  rag.py  weather.py
partymate/web/: server.py
tests/: support.py  test_material_check_service.py  test_material_import_service.py  test_member_memory_service.py  test_member_view_service.py  test_ocr_review_service.py  test_rag_parent_child.py  test_repository_material_workbench.py  test_repository_member_memory.py  test_repository_ocr_review.py  test_static_material_workbench_assets.py  test_web_material_workbench_api.py
(+7 files in other folders)
