[project]
name = "partymate"
version = "0.1.0"
description = "党务工作智能助手 — PartyMate"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.105.0",
    "python-docx>=1.2.0",
    "httpx>=0.27.0",
    "python-pptx>=1.0.2",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "pymupdf>=1.27.2.3",
    "easyocr>=1.7.2",
    "chromadb>=1.5.0,<1.6.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "flagembedding>=1.3.0",
    "torch>=2.5.0,<2.6.0",
    "torchvision>=0.20.0,<0.21.0",
    "mcp>=1.0.0",
    "fastmcp>=0.4.1",
]

[project.scripts]
partymate = "partymate.cli:main"

[tool.pydantic-ai]
model = "openai:gpt-4o"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
